# tool_whiteboardcoder

./: Makefile  pyproject.toml  requirements.txt
docs/adr/: ADR_1_migrate-from-huggingface-to-vllm.md
src/: __init__.py  cli.py  main.py
src/code/: __init__.py
src/models/: __init__.py
src/ocr/: __init__.py
